Refactoring electron app to use an MVC structure

--- a/electron_webapp/package.json
+++ b/electron_webapp/package.json
@@ -24,5 +24,6 @@
         "electron": "^1.4.1",
         "electron-builder": "20.2.0",
         "electron-reload": "^1.2.2"
-    }
+    },
+    "dependencies": {}
 }
